src/test/ui/impl-trait/issues/issue-83929-impl-trait-in-generic-default.stderr
error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/issue-83929-impl-trait-in-generic-default.rs:1:16
   |
LL | struct Foo<T = impl Copy>(T);
   |                ^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/issue-83929-impl-trait-in-generic-default.rs:4:20
   |
LL | type Result<T, E = impl std::error::Error> = std::result::Result<T, E>;
   |                    ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0562`.
